# alleinsein

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  README.md  docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose.yaml  pyproject.toml  setup.sh
.github/workflows/: version-bump.yml
backend/: .env.example  dev.env  main.py  main_mvp.py  prod.env
dockerfile/: Dockerfile  Dockerfile_base  Dockerfile_uv
docs/: architecture.md  cloudflare_setup.md  development_workflow.md  raster_creation.md  tailscale_setup.md  vps_setup.md
docs/future/: log-user-interaction.md
frontend/: wrangler.jsonc
frontend/new/: app.js  config.js  geolocation.js  germany-mask.geojson  index.html  map.js  shared.js  style.css
frontend/static/: app.js  config.js  dev-drawer.js  geolocation.js  germany-boundary.geojson  germany-mask org.geojson  germany-mask.geojson  index.css  index.html  leaflet_2.css  leaflet_2.html  leaflet_map.js  location.js  map.js  maplibre.html  maplibre_2.css  maplibre_2.html  maplibre_map.js  shared.js  style.css
frontend/static_codex/: index.css  index.html  map.js  shared.js
raster/: config.env  create_coarse_raster.py  create_coarse_raster.sh  create_eu_raster.py  create_hotspot_slope_band.sh  create_raster.py  create_raster.sh  create_slope_mod_band.sh  map.qgz  raster.conf  raster_settings.py  test.sh
raster/eu/: bounds_create_dissolved.py  create_eu_raster.py  create_eu_raster.sh  eu.conf  (+2 more)
scripts/: backend.ps1  backend.sh  deploy_locally.ps1  deploy_locally.sh  dev.ps1  dev.sh  docker.ps1  docker.sh  frontend.ps1  frontend.sh  lint.ps1  lint.sh  redeploy_vps.sh  setup_dev.sh  smoke-test.ps1  smoke-test.sh
tests/: benchmark_titiler.py  gdal_env_default.sh  gdal_env_optimized.sh  gdal_env_vps_4gb.sh  test_aiocache.py  test_browsing_simulation.py  test_create_raster_workflow.py  test_env.py  test_map_frontend.py  test_raster_performance.py  test_titiler.py
(+82 files in other folders)
