[project]
name = "alleine"
version = "2.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "titiler.core>=2.0.4",
    "uvicorn>=0.49.0",
    "pydantic-settings>=2.14.1",
]

[dependency-groups]
dev = [
    "commitizen>=4.0.0",
    "ty>=0.0.46",
    "pre-commit>=4.0.0",
    "ruff>=0.15.16",
    "pytest>=9.0.3",
    "rio-cogeo>=7.0.2",
    "osmnx>=2.1.0",
    "python-dotenv>=1.0.1",
    "gdal==3.12.2; sys_platform != 'win32'",
    "shapely>=2.1.2",
    "geopandas>=1.1.3",
    "pytest-playwright>=0.7.0",
    "playwright>=1.60.0",
]


[tool.pytest.ini_options]
addopts = "-s"
pythonpath = ["."]
testpaths = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
version_files = [
    "backend/_version.py:^__version__",
]
update_changelog_on_bump = true
